# compilerInC

./: .gdb_history  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  codegen.c  codegen.h  compile_commands.json  compiler  context.h  defines.h  error.c  error.h  interpreter.c  interpreter.h  ir.c  ir.h  lexer.c  lexer.h  main.c  parser.c  parser.h  src.txt  ssa.c  ssa.h  string.c  string.h  symbols.c  symbols.h  token.h  types.c  types.h  visitor.c  visitor.h  x86.c
.cache/clangd/index/: codegen.c.FE054D7796BE3E57.idx  codegen.h.F19DFCF969BDE244.idx  context.h.8E1457BA593489FB.idx  error.c.82DB76C0E5D9818B.idx  error.h.2FB2D1690DC9ABB3.idx  interpreter.c.C680C8D26505B8C3.idx  interpreter.h.6F1C7A3BA7EA6DAC.idx  lexer.c.E5187C3D3E10C9A3.idx  lexer.h.13EF8AEAE768A7A0.idx  main.c.6E5E1A032C208840.idx  parser.c.9C7C8ADABB24CF44.idx  parser.h.7629B5DE6FB170C9.idx  ssa.c.A3E58368BA95EC44.idx  ssa.h.2EBBA373A97806F8.idx  string.c.25A7FE15B48FE147.idx  string.h.E168CFD77B83C017.idx  token.h.F007CAA40565D985.idx
src/: context.h  error.c  error.h  interpreter.c  interpreter.h  ir.c  ir.h  lexer.c  main.c  ssa.c  ssa.h  string.c  string.h  token.h  types.c  types.h  x86.c  x86.h
src/ds/: hashtable.c  hashtable.h
src/frontend/: lexer.c  lexer.h  parser.c  token.h
src/include/: library.h
src/visitor/: symbols.c  symbols.h  typechecker.c  typechecker.h  visitor.c  visitor.h
